--- a/gui/src/Dialogs/WordlistDialog.ui
+++ b/gui/src/Dialogs/WordlistDialog.ui
@@ -49,7 +49,7 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QLabel" name="label_title">
+        <widget class="QLabel" name="labelTitle">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
            <horstretch>0</horstretch>
