--- a/gui/src/engines/active/Active.ui
+++ b/gui/src/engines/active/Active.ui
@@ -247,7 +247,7 @@
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_17">
            <item>
-            <widget class="QPushButton" name="buttonClear">
+            <widget class="QPushButton" name="buttonClearResults">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -270,7 +270,7 @@
               <string notr="true"/>
              </property>
              <property name="text">
-              <string>Clear Output</string>
+              <string>Clear Results</string>
              </property>
             </widget>
            </item>
@@ -321,7 +321,7 @@
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout_23">
              <property name="spacing">
-              <number>4</number>
+              <number>5</number>
              </property>
              <property name="leftMargin">
               <number>2</number>
@@ -333,7 +333,7 @@
               <number>0</number>
              </property>
              <property name="bottomMargin">
-              <number>1</number>
+              <number>3</number>
              </property>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_18">
@@ -474,6 +474,28 @@
                </attribute>
               </widget>
              </item>
+             <item>
+              <widget class="QProgressBar" name="progressBar">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>17</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>17</height>
+                </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true"/>
+               </property>
+               <property name="value">
+                <number>0</number>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
            <widget class="QWidget" name="tabLogs">
@@ -551,28 +573,6 @@
        </item>
       </layout>
      </widget>
-    </widget>
-   </item>
-   <item>
-    <widget class="QProgressBar" name="progressBar">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>15</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>15</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
     </widget>
    </item>
   </layout>
