--- a/gui/src/engines/osint/Osint.ui
+++ b/gui/src/engines/osint/Osint.ui
@@ -291,7 +291,7 @@
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_7">
            <item>
-            <widget class="QPushButton" name="buttonClear">
+            <widget class="QPushButton" name="buttonClearResults">
              <property name="minimumSize">
               <size>
                <width>0</width>
@@ -363,7 +363,7 @@
               <number>0</number>
              </property>
              <property name="bottomMargin">
-              <number>0</number>
+              <number>3</number>
              </property>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -520,6 +520,31 @@
                <attribute name="verticalHeaderDefaultSectionSize">
                 <number>15</number>
                </attribute>
+              </widget>
+             </item>
+             <item>
+              <widget class="QProgressBar" name="progressBar">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>17</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>16777215</width>
+                 <height>17</height>
+                </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true"/>
+               </property>
+               <property name="maximum">
+                <number>0</number>
+               </property>
+               <property name="value">
+                <number>-1</number>
+               </property>
               </widget>
              </item>
             </layout>
@@ -1244,31 +1269,6 @@
      </widget>
     </widget>
    </item>
-   <item>
-    <widget class="QProgressBar" name="progressBar">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>15</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>15</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-     <property name="maximum">
-      <number>0</number>
-     </property>
-     <property name="value">
-      <number>-1</number>
-     </property>
-    </widget>
-   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -1282,7 +1282,7 @@
  <tabstops>
   <tabstop>lineEditTarget</tabstop>
   <tabstop>buttonStart</tabstop>
-  <tabstop>buttonClear</tabstop>
+  <tabstop>buttonClearResults</tabstop>
   <tabstop>tableViewResults</tabstop>
   <tabstop>listWidgetLogs</tabstop>
  </tabstops>
