re-writting osint engines in C++ instead of python

--- a/gui/res.qrc
+++ b/gui/res.qrc
@@ -5,6 +5,7 @@
         <file>res/icons/settings.png</file>
         <file>res/icons/folder2.png</file>
         <file>res/icons/arrow.png</file>
+        <file>res/icons/checkBox2.png</file>
     </qresource>
     <qresource prefix="/files">
         <file>res/files/nameservers.txt</file>
