--- a/gui/src/engines/osint/Osint.ui
+++ b/gui/src/engines/osint/Osint.ui
@@ -74,6 +74,11 @@
          <string> Emails</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Urls</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
@@ -855,7 +860,7 @@
                   <x>0</x>
                   <y>0</y>
                   <width>184</width>
-                  <height>663</height>
+                  <height>677</height>
                  </rect>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -866,6 +871,13 @@
                   <number>5</number>
                  </property>
                  <item>
+                  <widget class="QCheckBox" name="checkBox_engine_anubis">
+                   <property name="text">
+                    <string>Anubis</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
                   <widget class="QCheckBox" name="checkBox_engine_certspotter">
                    <property name="text">
                     <string>CertSpotter</string>
@@ -873,9 +885,44 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="Line" name="line">
-                   <property name="orientation">
-                    <enum>Qt::Horizontal</enum>
+                  <widget class="QCheckBox" name="checkBox_engine_otx">
+                   <property name="text">
+                    <string>Otx</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_sublist3r">
+                   <property name="text">
+                    <string>sublist3r</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_threatcrowd">
+                   <property name="text">
+                    <string>ThreatCrowd</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_threatminer">
+                   <property name="text">
+                    <string>ThreatMiner</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_hackertarget">
+                   <property name="text">
+                    <string>HackerTarget</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_dnsbufferoverrun">
+                   <property name="text">
+                    <string>DnsBufferOverRun</string>
                    </property>
                   </widget>
                  </item>
@@ -901,13 +948,6 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_dnsbufferoverrun">
-                   <property name="text">
-                    <string>DnsBufferOverRun</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
                   <widget class="QCheckBox" name="checkBox_engine_dnsdumpster">
                    <property name="text">
                     <string>DnsDumpster</string>
@@ -925,13 +965,6 @@
                   <widget class="QCheckBox" name="checkBox_engine_duckduckgo">
                    <property name="text">
                     <string>DuckduckGo</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_hackertarget">
-                   <property name="text">
-                    <string>HackerTarget</string>
                    </property>
                   </widget>
                  </item>
@@ -959,13 +992,6 @@
                   <widget class="QCheckBox" name="checkBox_engine_omnisint">
                    <property name="text">
                     <string>Omnisint</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_otx">
-                   <property name="text">
-                    <string>Otx</string>
                    </property>
                   </widget>
                  </item>
@@ -1012,30 +1038,9 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_sublist3r">
-                   <property name="text">
-                    <string>sublist3r</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
                   <widget class="QCheckBox" name="checkBox_engine_suip">
                    <property name="text">
                     <string>Suip</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_threatcrowd">
-                   <property name="text">
-                    <string>ThreatCrowd</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_threatminer">
-                   <property name="text">
-                    <string>ThreatMiner</string>
                    </property>
                   </widget>
                  </item>
