--- a/gui/src/engines/osint/Osint.ui
+++ b/gui/src/engines/osint/Osint.ui
@@ -858,9 +858,9 @@
                 <property name="geometry">
                  <rect>
                   <x>0</x>
-                  <y>0</y>
+                  <y>-466</y>
                   <width>184</width>
-                  <height>677</height>
+                  <height>776</height>
                  </rect>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -871,9 +871,9 @@
                   <number>5</number>
                  </property>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_anubis">
+                  <widget class="QLabel" name="label_2">
                    <property name="text">
-                    <string>Anubis</string>
+                    <string>Certificates</string>
                    </property>
                   </widget>
                  </item>
@@ -892,30 +892,37 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_otx">
+                  <widget class="QCheckBox" name="checkBox_engine_googleCert">
                    <property name="text">
-                    <string>Otx</string>
+                    <string>GoogleCert</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_sublist3r">
+                  <widget class="QLabel" name="label_5">
                    <property name="text">
-                    <string>sublist3r</string>
+                    <string>API</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_threatcrowd">
+                  <widget class="QCheckBox" name="checkBox_engine_anubis">
                    <property name="text">
-                    <string>ThreatCrowd</string>
+                    <string>Anubis</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_threatminer">
+                  <widget class="QCheckBox" name="checkBox_engine_dnsdumpster">
                    <property name="text">
-                    <string>ThreatMiner</string>
+                    <string>DnsDumpster</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_dnsbufferoverrun">
+                   <property name="text">
+                    <string>DnsBufferOverRun</string>
                    </property>
                   </widget>
                  </item>
@@ -927,9 +934,92 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_dnsbufferoverrun">
+                  <widget class="QCheckBox" name="checkBox_engine_netcraft">
+                   <property name="cursor">
+                    <cursorShape>ArrowCursor</cursorShape>
+                   </property>
                    <property name="text">
-                    <string>DnsBufferOverRun</string>
+                    <string>Netcraft</string>
+                   </property>
+                   <property name="tristate">
+                    <bool>false</bool>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_otx">
+                   <property name="text">
+                    <string>Otx</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_omnisint">
+                   <property name="text">
+                    <string>Omnisint</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_qwant">
+                   <property name="text">
+                    <string>Qwant</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_rapiddns">
+                   <property name="text">
+                    <string>RapidDns</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_suip">
+                   <property name="text">
+                    <string>Suip</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_pkey">
+                   <property name="text">
+                    <string>pKey</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_sublist3r">
+                   <property name="text">
+                    <string>sublist3r</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_threatminer">
+                   <property name="text">
+                    <string>ThreatMiner</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_threatcrowd">
+                   <property name="text">
+                    <string>ThreatCrowd</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="checkBox_engine_urlscan">
+                   <property name="text">
+                    <string>urlscan</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLabel" name="label_8">
+                   <property name="text">
+                    <string>Scrape</string>
                    </property>
                   </widget>
                  </item>
@@ -944,13 +1034,6 @@
                   <widget class="QCheckBox" name="checkBox_engine_baidu">
                    <property name="text">
                     <string>Baidu</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_dnsdumpster">
-                   <property name="text">
-                    <string>DnsDumpster</string>
                    </property>
                   </widget>
                  </item>
@@ -976,57 +1059,9 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_netcraft">
-                   <property name="cursor">
-                    <cursorShape>ArrowCursor</cursorShape>
-                   </property>
-                   <property name="text">
-                    <string>Netcraft</string>
-                   </property>
-                   <property name="tristate">
-                    <bool>false</bool>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_omnisint">
-                   <property name="text">
-                    <string>Omnisint</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
                   <widget class="QCheckBox" name="checkBox_engine_passivedns">
                    <property name="text">
                     <string>PassiveDns</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_pkey">
-                   <property name="text">
-                    <string>pKey</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_qwant">
-                   <property name="text">
-                    <string>Qwant</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_rapiddns">
-                   <property name="text">
-                    <string>RapidDns</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_san">
-                   <property name="text">
-                    <string>San</string>
                    </property>
                   </widget>
                  </item>
@@ -1038,13 +1073,6 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_suip">
-                   <property name="text">
-                    <string>Suip</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
                   <widget class="QCheckBox" name="checkBox_engine_trello">
                    <property name="text">
                     <string>Trello</string>
@@ -1052,9 +1080,16 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_urlscan">
+                  <widget class="QCheckBox" name="checkBox_engine_yahoo">
                    <property name="text">
-                    <string>urlscan</string>
+                    <string>Yahoo</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLabel" name="label_9">
+                   <property name="text">
+                    <string>Archive</string>
                    </property>
                   </widget>
                  </item>
@@ -1066,16 +1101,16 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_virustotal">
+                  <widget class="QCheckBox" name="checkBox_engine_archiveit">
                    <property name="text">
-                    <string>VirusTotal</string>
+                    <string>ArchiveIt</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QCheckBox" name="checkBox_engine_yahoo">
+                  <widget class="QCheckBox" name="checkBox_engine_archiveToday">
                    <property name="text">
-                    <string>Yahoo</string>
+                    <string>ArchiveToday</string>
                    </property>
                   </widget>
                  </item>
@@ -1178,6 +1213,13 @@
                   </widget>
                  </item>
                  <item>
+                  <widget class="QCheckBox" name="checkBox_engine_virustotalapi">
+                   <property name="text">
+                    <string>VirusTotal</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
                   <widget class="QCheckBox" name="checkBox_engine_projectdiscovery">
                    <property name="text">
                     <string>ProjectDiscovery</string>
@@ -1244,13 +1286,6 @@
                   <widget class="QCheckBox" name="checkBox_engine_securitytrails">
                    <property name="text">
                     <string>SecurityTrails</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QCheckBox" name="checkBox_engine_virustotalapi">
-                   <property name="text">
-                    <string>VirusTotal Api</string>
                    </property>
                   </widget>
                  </item>
